[gd_scene load_steps=8 format=3 uid="uid://bcrobxjho0hws"]

[ext_resource type="Script" uid="uid://ddgwyfne3b8gg" path="res://script/question_scene.gd" id="1_mtw1i"]
[ext_resource type="FontFile" uid="uid://dbdvbgducoq2q" path="res://ARCADE.TTF" id="1_xbfpy"]

[sub_resource type="LabelSettings" id="LabelSettings_mtw1i"]
font = ExtResource("1_xbfpy")
font_size = 60

[sub_resource type="LabelSettings" id="LabelSettings_1ut6o"]
font = ExtResource("1_xbfpy")
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_uilvu"]
font = ExtResource("1_xbfpy")
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_goew4"]
font = ExtResource("1_xbfpy")
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_aqsin"]
font = ExtResource("1_xbfpy")
font_size = 50

[node name="question_scene" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mtw1i")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -604.0
offset_top = -208.0
offset_right = -311.0
offset_bottom = -148.0
grow_horizontal = 2
grow_vertical = 2
text = "QUESTION: "
label_settings = SubResource("LabelSettings_mtw1i")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 167.0
offset_top = 246.0
offset_right = 243.0
offset_bottom = 556.0
theme_override_constants/separation = 26

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="A" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_xbfpy")
theme_override_font_sizes/font_size = 50
text = "A. "
expand_icon = true

[node name="LabelA" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "TEST"
label_settings = SubResource("LabelSettings_1ut6o")

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="B" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_xbfpy")
theme_override_font_sizes/font_size = 50
text = "B. "

[node name="LabelB" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "TEST"
label_settings = SubResource("LabelSettings_uilvu")

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="C" type="Button" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_xbfpy")
theme_override_font_sizes/font_size = 50
text = "C. "

[node name="LabelC" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "TEST"
label_settings = SubResource("LabelSettings_goew4")

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="D" type="Button" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_xbfpy")
theme_override_font_sizes/font_size = 50
text = "D. "

[node name="LabelD" type="Label" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_xbfpy")
theme_override_font_sizes/font_size = 90
text = "TEST"
label_settings = SubResource("LabelSettings_aqsin")
